[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Level4.gd" type="Script" id=2]
[ext_resource path="res://scenes/EnemyWizard.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/EnemyBossCrab.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/MovingPlatform.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/music/ixnxnekw.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/music/Healing Tune.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/music/ixnxnq.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/growing.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx/wind.ogg" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 390, 160 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 360, 90 )

[node name="Level4" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
nextLevel = "EndScrn.tscn"
currentLevel = "Level4.tscn"

[node name="TileMap" parent="." index="0"]
tile_data = PoolIntArray( -1048546, 0, 851968, -983010, 0, 851968, -917474, 0, 851968, -786433, 0, 851968, -851938, 0, 851968, -720897, 0, 851968, -786402, 0, 851968, -655361, 0, 851968, -720866, 0, 851968, -589825, 0, 851968, -655330, 0, 851968, -524289, 0, 851968, -589794, 0, 851968, -458753, 0, 851968, -524258, 0, 851968, -393217, 0, 851968, -458722, 0, 851968, -327681, 0, 851968, -393186, 0, 851968, -262145, 0, 851968, -327650, 0, 851968, -196609, 0, 851968, -262114, 0, 851968, -131073, 0, 851968, -196608, 0, 851968, -196607, 0, 851968, -196606, 0, 851968, -196605, 0, 851968, -196604, 0, 851968, -196603, 0, 851968, -196602, 0, 851968, -196601, 0, 851968, -196600, 0, 851968, -196599, 0, 851968, -196598, 0, 851968, -196597, 0, 851968, -196596, 0, 851968, -196595, 0, 851968, -196594, 0, 851968, -196593, 0, 851968, -196592, 0, 851968, -196591, 0, 851968, -196590, 0, 851968, -196589, 0, 851968, -196588, 0, 851968, -196587, 0, 851968, -196586, 0, 851968, -196585, 0, 851968, -196584, 0, 851968, -196583, 0, 851968, -196582, 0, 851968, -196581, 0, 851968, -196580, 0, 851968, -196579, 0, 851968, -196578, 0, 851968, -65537, 0, 851968, -131042, 0, 851968, -1, 0, 851968, -65506, 0, 851968, 65535, 0, 851968, 30, 0, 851968, 131071, 0, 851968, 65566, 0, 851968, 65567, 0, 851968, 65568, 0, 851968, 65569, 0, 851968, 65570, 0, 851968, 65571, 0, 851968, 65572, 0, 851968, 65573, 0, 851968, 65574, 0, 851968, 65575, 0, 851968, 65576, 0, 851968, 65577, 0, 851968, 196607, 0, 851968, 131113, 0, 851968, 131114, 0, 851968, 131115, 0, 851968, 131116, 0, 851968, 131117, 0, 851968, 131118, 0, 851968, 262143, 0, 851968, 196654, 0, 851968, 196655, 0, 851968, 196656, 0, 851968, 327679, 0, 851968, 262192, 0, 851968, 262193, 0, 851968, 393215, 0, 851968, 327729, 0, 851968, 327730, 0, 851968, 327731, 0, 851968, 458749, 0, 393238, 458750, 0, 393238, 458751, 0, 393238, 393216, 0, 393238, 393217, 0, 393238, 393218, 0, 393238, 393219, 0, 393238, 393220, 0, 393238, 393221, 0, 393238, 393222, 0, 393238, 393223, 0, 393238, 393224, 0, 393238, 393225, 0, 393238, 393226, 0, 851968, 393227, 0, 851968, 393228, 0, 851968, 393229, 0, 851968, 393230, 0, 851968, 393231, 0, 851968, 393232, 0, 851968, 393233, 0, 851968, 393234, 0, 851968, 393235, 0, 851968, 393236, 0, 851968, 393237, 0, 851968, 393238, 0, 851968, 393239, 0, 851968, 393240, 0, 851968, 393241, 0, 851968, 393242, 0, 851968, 393243, 0, 851968, 393244, 0, 851968, 393245, 0, 851968, 393246, 0, 851968, 393247, 0, 851968, 393248, 0, 851968, 393249, 0, 851968, 393250, 0, 851968, 393251, 0, 851968, 393252, 0, 851968, 393253, 0, 851968, 393254, 0, 851968, 393267, 0, 851968, 393268, 0, 851968, 458762, 0, 851968, 458790, 0, 851968, 458791, 0, 851968, 458805, 0, 851968, 458806, 0, 851968, 524298, 0, 851968, 524327, 0, 851968, 524328, 0, 851968, 524329, 0, 851968, 524330, 0, 851968, 524331, 0, 851968, 524332, 0, 851968, 524333, 0, 851968, 524342, 0, 851968, 524343, 0, 851968, 524344, 0, 851968, 589834, 0, 851968, 589869, 0, 851968, 589870, 0, 851968, 589871, 0, 851968, 589872, 0, 851968, 589880, 0, 851968, 655370, 0, 851968, 655408, 0, 851968, 655409, 0, 851968, 655410, 0, 851968, 655417, 0, 851968, 655418, 0, 851968, 720906, 0, 851968, 720946, 0, 851968, 720954, 0, 851968, 720955, 0, 851968, 786442, 0, 851968, 786482, 0, 851968, 786483, 0, 851968, 786484, 0, 851968, 786485, 0, 851968, 786491, 0, 851968, 851978, 0, 851968, 852021, 0, 851968, 852022, 0, 851968, 852023, 0, 851968, 852027, 0, 851968, 917514, 0, 851968, 917559, 0, 851968, 917563, 0, 851968, 983050, 0, 851968, 983095, 0, 851968, 983099, 0, 851968, 1048586, 0, 851968, 1048631, 0, 851968, 1048635, 0, 851968, 1114122, 0, 851968, 1114167, 0, 851968, 1114171, 0, 851968, 1179658, 0, 851968, 1179703, 0, 851968, 1179707, 0, 851968, 1245194, 0, 851968, 1245239, 0, 851968, 1245243, 0, 851968, 1310730, 0, 851968, 1310751, 0, 851968, 1310752, 0, 851968, 1310753, 0, 851968, 1310754, 0, 851968, 1310755, 0, 851968, 1310756, 0, 851968, 1310757, 0, 851968, 1310758, 0, 851968, 1310759, 0, 851968, 1310760, 0, 851968, 1310761, 0, 851968, 1310762, 0, 851968, 1310763, 0, 851968, 1310764, 0, 851968, 1310765, 0, 851968, 1310766, 0, 851968, 1310767, 0, 851968, 1310768, 0, 851968, 1310769, 0, 851968, 1310770, 0, 851968, 1310771, 0, 851968, 1310772, 0, 851968, 1310773, 0, 851968, 1310774, 0, 851968, 1310775, 0, 851968, 1310779, 0, 851968, 1310780, 0, 851968, 1310781, 0, 851968, 1310782, 0, 851968, 1310783, 0, 851968, 1310784, 0, 851968, 1310785, 0, 851968, 1310786, 0, 851968, 1310787, 0, 851968, 1310788, 0, 851968, 1310789, 0, 851968, 1310790, 0, 851968, 1310791, 0, 851968, 1310792, 0, 851968, 1310793, 0, 851968, 1310794, 0, 851968, 1310795, 0, 851968, 1310796, 0, 851968, 1310797, 0, 851968, 1376266, 0, 851968, 1376287, 0, 851968, 1376333, 0, 851968, 1441802, 0, 851968, 1441823, 0, 851968, 1441869, 0, 851968, 1507338, 0, 851968, 1507359, 0, 851968, 1507405, 0, 851968, 1572874, 0, 851968, 1572895, 0, 851968, 1572941, 0, 851968, 1638410, 0, 851968, 1638431, 0, 851968, 1638477, 0, 851968, 1703946, 0, 851968, 1703967, 0, 851968, 1704013, 0, 851968, 1769482, 0, 851968, 1769503, 0, 851968, 1769549, 0, 851968, 1835018, 0, 851968, 1835039, 0, 851968, 1835085, 0, 851968, 1900554, 0, 851968, 1900575, 0, 851968, 1900621, 0, 851968, 1966090, 0, 851968, 1966111, 0, 851968, 1966157, 0, 851968, 2031626, 0, 851968, 2031647, 0, 851968, 2031693, 0, 851968, 2097162, 0, 851968, 2097183, 0, 851968, 2097229, 0, 851968, 2162698, 0, 851968, 2162719, 0, 851968, 2162765, 0, 851968, 2228234, 0, 851968, 2228255, 0, 851968, 2228301, 0, 851968, 2293770, 0, 851968, 2293791, 0, 851968, 2293837, 0, 851968, 2359327, 0, 851968, 2359373, 0, 851968, 2424863, 0, 851968, 2424909, 0, 851968, 2490399, 0, 851968, 2490445, 0, 851968, 2555935, 0, 851968, 2555981, 0, 851968, 2621471, 0, 851968, 2621483, 0, 196630, 2621486, 0, 196630, 2621487, 0, 196630, 2621488, 0, 196630, 2621489, 0, 196630, 2621490, 0, 196630, 2621499, 0, 196630, 2621500, 0, 196630, 2621501, 0, 196630, 2621502, 0, 196630, 2621503, 0, 196630, 2621506, 0, 196630, 2621517, 0, 851968, 2687007, 0, 851968, 2687019, 0, 196630, 2687042, 0, 196630, 2687053, 0, 851968, 2752543, 0, 851968, 2752589, 0, 851968, 2818079, 0, 851968, 2818091, 0, 196630, 2818114, 0, 196630, 2818125, 0, 851968, 2883615, 0, 851968, 2883616, 0, 22, 2883617, 0, 22, 2883618, 0, 22, 2883619, 0, 22, 2883620, 0, 22, 2883621, 0, 22, 2883622, 0, 22, 2883623, 0, 22, 2883624, 0, 22, 2883625, 0, 22, 2883626, 0, 22, 2883627, 0, 196630, 2883650, 0, 196630, 2883651, 0, 22, 2883652, 0, 22, 2883653, 0, 22, 2883654, 0, 22, 2883655, 0, 22, 2883656, 0, 22, 2883657, 0, 22, 2883658, 0, 22, 2883659, 0, 22, 2883660, 0, 22, 2883661, 0, 851968, 2949151, 0, 851968, 2949152, 0, 851968, 2949153, 0, 851968, 2949154, 0, 851968, 2949155, 0, 851968, 2949156, 0, 851968, 2949157, 0, 851968, 2949158, 0, 851968, 2949159, 0, 851968, 2949160, 0, 851968, 2949161, 0, 851968, 2949162, 0, 851968, 2949163, 0, 196630, 2949164, 0, 196630, 2949165, 0, 196630, 2949166, 0, 196630, 2949167, 0, 196630, 2949168, 0, 196630, 2949169, 0, 196630, 2949170, 0, 196630, 2949171, 0, 196630, 2949172, 0, 196630, 2949173, 0, 196630, 2949174, 0, 196630, 2949175, 0, 196630, 2949176, 0, 196630, 2949177, 0, 196630, 2949178, 0, 196630, 2949179, 0, 196630, 2949180, 0, 196630, 2949181, 0, 196630, 2949182, 0, 196630, 2949183, 0, 196630, 2949184, 0, 196630, 2949185, 0, 196630, 2949186, 0, 196630, 2949187, 0, 851968, 2949188, 0, 851968, 2949189, 0, 851968, 2949190, 0, 851968, 2949191, 0, 851968, 2949192, 0, 851968, 2949193, 0, 851968, 2949194, 0, 851968, 2949195, 0, 851968, 2949196, 0, 851968, 2949197, 0, 851968 )

[node name="EnemyWizard2" parent="TileMap" index="0" instance=ExtResource( 3 )]
visible = false
position = Vector2( 697, 679.5 )

[node name="EnemyBossCrab" parent="TileMap" index="1" instance=ExtResource( 4 )]
position = Vector2( 722, 699.5 )

[node name="MovingPlatform" parent="TileMap" index="2" instance=ExtResource( 5 )]
position = Vector2( 880, 683 )
moving_direction = "right"

[node name="EnemyWizard" parent="TileMap" index="3" instance=ExtResource( 3 )]
visible = false
position = Vector2( 1065, 680 )

[node name="Player" parent="." index="1"]
position = Vector2( 130, 156 )

[node name="Camera2D" parent="Player" index="1"]
limit_top = 0
limit_bottom = 1500

[node name="CollisionShape2D" parent="WinArea" index="0"]
position = Vector2( 2030, 1840 )

[node name="Music" parent="." index="7"]
stream = ExtResource( 6 )

[node name="WinMusic" parent="." index="8"]
stream = ExtResource( 7 )

[node name="DeathMusic" parent="." index="9"]
stream = ExtResource( 8 )

[node name="PlayerFirstFallArea" type="Area2D" parent="." index="11" groups=[
"enemies_aux",
"cutscene_trigger",
]]
position = Vector2( 1490, 1380 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFirstFallArea" index="0"]
shape = SubResource( 1 )

[node name="CutsceneTotalTimer" type="Timer" parent="." index="12"]
wait_time = 8.0

[node name="Tween" type="Tween" parent="." index="13"]

[node name="Position2D" type="Position2D" parent="." index="14"]
position = Vector2( 1580, 1270 )

[node name="CameraNode" type="Node2D" parent="." index="15"]
position = Vector2( 1860, 1350 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="CameraNode" index="0"]
limit_left = 0
limit_top = 0
limit_bottom = 1500
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="CameraSetTimer" type="Timer" parent="." index="16"]

[node name="CutsceneAnimTimer" type="Timer" parent="." index="17"]
wait_time = 6.0

[node name="Area2D" type="Area2D" parent="." index="18" groups=[
"instakill",
]]
position = Vector2( 1010, 1510 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="." index="19" groups=[
"instakill",
]]
position = Vector2( 2500, 1510 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2" index="0"]
shape = SubResource( 2 )

[node name="TimeTillWin" type="Timer" parent="." index="20"]

[node name="GrowingSound" type="AudioStreamPlayer" parent="." index="21"]
stream = ExtResource( 9 )
volume_db = -9.354
bus = "Enemy SFX"

[node name="InitialBGM" type="AudioStreamPlayer" parent="." index="22"]
stream = ExtResource( 10 )
volume_db = -11.005
[connection signal="dead" from="TileMap/EnemyBossCrab" to="." method="_on_EnemyBossCrab_dead"]
[connection signal="area_entered" from="PlayerFirstFallArea" to="." method="_on_PlayerFirstFallArea_area_entered"]
[connection signal="timeout" from="CutsceneTotalTimer" to="." method="_on_CutsceneTotalTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="CameraSetTimer" to="." method="_on_CameraSetTimer_timeout"]
[connection signal="timeout" from="CutsceneAnimTimer" to="." method="_on_CutsceneAnimTimer_timeout"]
[connection signal="timeout" from="TimeTillWin" to="." method="_on_TimeTillWin_timeout"]

[editable path="Player"]
